--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,8 +47,12 @@
   }
 }
 
-.no-mouse {
+.no-pointer {
   pointer-events: none;
+}
+
+.all-pointer {
+  pointer-events: auto;
 }
 
 .screen-border-margin {
